--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "webpack-dev-server": "1.15.1"
   },
   "dependencies": {
-    "@ipreo/cupcake-styles": "0.0.1-beta.0",
-    "bootstrap": "^4.0.0-alpha.4",
+    "bootstrap": "3.3.7",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-router": "^4.0.0-2"
