--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "bootstrap": "3.3.7",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-router": "^4.0.0-2"
+    "react-router": "^4.0.0-2",
+    "react-select": "^1.0.0-rc.2",
+    "timezones.json": "^1.1.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
